k8s/interactive-classifier/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ic
  namespace: interactive-classifier
  labels:
    app: ic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ic
  template:
    metadata:
      labels:
        app: ic
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: ic
          image: ghcr.io/ddmal/interactive-classifier:develop-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
