k8s/interactive-classifier/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ic
  namespace: interactive-classifier
  labels:
    app: ic
spec:
  selector:
    app: ic
  ports:
    - name: http
      port: 8000
      targetPort: 8000
