k8s/interactive-classifier/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ic
  namespace: interactive-classifier
  labels:
    app: ic
spec:
  ingressClassName: traefik
  rules:
    - host: ic.simssa.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ic
                port:
                  number: 8000
